# rspack-sources

./: .gitignore  .npmrc  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain  rustfmt.toml  wasm-bindings.js
.cargo/: config.toml
.github/: renovate.json
.github/workflows/: Bench.yaml  Bench.yaml.bak  CI.yaml  Lint.yaml  Publish.yaml  Test.yaml
benches/: bench.rs  bench_complex_replace_source.rs  bench_large_replace_source.rs  bench_source_map.rs  benchmark_repetitive_react_components.rs
benches/fixtures/transpile-minify/: test.ts
benches/fixtures/transpile-minify/files/: helloworld.js  helloworld.js.map  helloworld.min.js  helloworld.min.js.map  helloworld.mjs
benches/fixtures/transpile-rollup/: build.sh  test.ts
benches/fixtures/transpile-rollup/files/: a.js  a.mjs  b.js  b.js.map  bundle.js.map  index.js.map  index.mjs
benchmark/: bench.ts  package.json  tsconfig.json
core/: Cargo.toml  README.md
core/benches/: bench.rs
core/examples/: basic.rs
core/src/: cached_source.rs  concat_source.rs  lib.rs  original_source.rs  raw_source.rs  replace_source.rs  result.rs  source.rs  source_map_source.rs
core/src/helpers/: mapping.rs  mod.rs
core/tests/: concat.rs  replace.rs
core/tests/fixtures/transpile-rollup/files/: a.js.map  b.mjs  bundle.js  index.js
node/: Cargo.toml  binding.d.ts  binding.js  index.d.ts  index.js  package.json  tsconfig.json
node/__tests__/: index.spec.ts
node/src/: lib.rs
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: arena.rs  cached_source.rs  chunks.rs  concat_source.rs  decoder.rs  encoder.rs  error.rs  hash.rs  helpers.rs  lib.rs  line_with_indices_index.rs  linear_map.rs  main.rs  memory_pool.rs  object_pool.rs  original_source.rs  raw_source.rs  replace_source.rs  rope.rs  source.rs  source_content_lines.rs  source_map.rs  source_map_source.rs  source_text.rs  vlq.rs  with_indices.rs  with_utf16.rs  work_context.rs
src/sum_tree/: cursor.rs  mod.rs  tree_map.rs
tests/: compat_source.rs
wasm/: Cargo.toml  package.json
wasm/__tests__/: index.spec.ts
wasm/src/: lib.rs
