[package]
name = "rspack_sources"
version = "0.4.17"
edition = "2021"
authors = ["h-a-n-a <andywangsy@gmail.com>", "ahabhgk <ahabhgk@gmail.com>"]
resolver = "2"
license = "MIT"
description = "Rusty webpack-sources port."
keywords = ["sources", "sourcemap"]
repository = "https://github.com/web-infra-dev/rspack-sources"
documentation = "https://docs.rs/rspack-sources"
readme = "README.md"

include = ["/src/**/*.rs", "/*.toml", "/LICENSE", "/README.md"]

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn"
print_stderr = "warn"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "benchmark_repetitive_react_components"
harness = false

[[bench]]
name = "bench_complex_replace_source"
harness = false

[[bench]]
name = "bench_source_map"
harness = false

[dependencies]
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
dyn-clone = "1.0.20"
rustc-hash = "2.1.1"
memchr = "2.7.6"

codspeed-criterion-compat = { version = "4.1.0", default-features = false, optional = true }
static_assertions = "1.1.0"
simd-json = "0.17.0"

[dev-dependencies]
twox-hash = "2.1.2"
regex = "1.12.2"
criterion = { version = "0.8.0", default-features = false }
rayon = "1.11.0"

[features]
codspeed = ["codspeed-criterion-compat"]
