[package]
description = "rspack sources"
edition = "2021"
license = "MIT"
name = "rspack_sources"
repository = "https://github.com/speedy-js/rspack-sources"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sourcemap = "6.0.2"
smol_str = "0.1.23"
base64-simd = "0.5.0"
once_cell = "1.10.0"

