[package]
description = "rspack sources"
edition = "2021"
license = "MIT"
name = "rspack_sources"
repository = "https://github.com/speedy-js/rspack-sources"
version = "0.0.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sourcemap = "6.0.2"
smol_str = "0.1.23"
tracing = "0.1.34"
tracing-chrome = "0.6.0"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
base64-simd = "0.5.0"
once_cell = "1.10.0"

[dev-dependencies]
once_cell = "1.10.0"
