[package]
description = "rspack sources"
edition = "2021"
license = "MIT"
name = "rspack_sources"
repository = "https://github.com/speedy-js/rspack-sources"
version = "0.0.3"

[features]
defualt = []
concurrent = []

[dependencies]
sourcemap = "6.0.2"
smol_str = "0.1.23"
tracing = "0.1.34"
base64-simd = "0.5.0"

[dev-dependencies]
once_cell = "1.10.0"
tracing-chrome = "0.6.0"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
rayon = "1.5.3"
